refactor: 스프링부트 2.3.1애서 3.0.0으로 마이그레이션 발생하는 사이드이펙트 제거 - javax => jakarta - java 14 => java 17 - HandlerInterceptorAdapter -> HandlerInterceptor - hanced switch문 적용 - deprecated된 WebSecurityConfigurerAdapter 제거 및 대체 코드 삽입 - mysql -> mariadb 로 변